Add SQL to skills section in index.html
Updated skills section to include SQL.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<!-- HERO -->
+
 <header class="hero">
   <nav class="nav">
     <input type="checkbox" id="check">
@@ -55,6 +55,7 @@
     <span>CSS</span>
     <span>Bootstrap</span>
     <span>Python</span>
+    <span>SQL</span>
     <span>Machine Learning</span>
     <span>OpenCV</span>
     <span>Git & GitHub</span>
@@ -153,3 +154,4 @@
 
 </body>
 </html>
+
